[package]
name = "fr32"
version = "12.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Filecoin proofs Fr/32-byte conversion tooling"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
# Sorted alphabetically
anyhow.workspace = true
blstrs.workspace = true
byte-slice-cast.workspace = true
byteorder.workspace = true
ff.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Sorted alphabetically
bitvec = "0.17"
criterion.workspace = true
itertools.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
rand_xorshift.workspace = true

[[bench]]
name = "fr"
harness = false
