[package]
name = "logging-toolkit"
description = "Logging utilities"
version = "0.5.0"
authors = ["laser <l@s3r.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"
edition = "2018"

[dependencies]
slog = "2.4.1"
slog-term = "2.4.0"
slog-json = "2.3.0"
slog-async = "2.3.0"
lazy_static = "1.2"
