[package]
name = "filecoin-phase2"
version = "0.1.0"
description = "Phase2 for Filecoin circuits"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"


[dependencies]
bellperson = { version = "0.12.0", default-features = false }
filecoin-proofs = { version = "5.4.0", path = "../filecoin-proofs", default-features = false }
storage-proofs = { version = "5.4.0", path = "../storage-proofs", default-features = false }
groupy = "0.3.1"
log = "0.4.11"
clap = "2.33.3"
byteorder = "1.3.4"
rand = "0.7.3"
rand_chacha = "0.2.2"
simplelog = "0.8.0"
dialoguer = "0.7.1"
hex = "0.4.2"
blake2b_simd = "0.5.11"
fff = "0.2.3"
rayon = "1.5.0"
num_cpus = "1.13.0"
crossbeam = "0.8.0"

[features]
default = ["pairing", "gpu"]
gpu = ["bellperson/gpu", "filecoin-proofs/gpu", "storage-proofs/gpu"]
pairing = ["bellperson/pairing", "filecoin-proofs/pairing", "storage-proofs/pairing"]
blst = ["bellperson/blst", "filecoin-proofs/blst", "storage-proofs/blst"]
