[package]
name = "sector-builder-ffi"
description = "FFI Interface for sector-builder"
version = "0.1.0"
authors = ["laser <l@s3r.com>", "dignfiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
filecoin-proofs = { version = "^0.2", path = "../filecoin-proofs" }
sector-builder = { version = "^0.1", path = "../sector-builder" }
ffi-toolkit = { version = "^0.2", path = "../ffi-toolkit" }
logging-toolkit = { version = "^0.2", path = "../logging-toolkit" }
drop_struct_macro_derive = { version = "^0.2", path = "../drop-struct-macro-derive" }
slog = "2.4.1"
failure = "0.1.5"
libc = "0.2.58"
lazy_static = "1.3.0"

[dev-dependencies]
scopeguard = "1.0"
byteorder = "1.3.1"
tempfile = "3.0.8"
rand = "0.6.5"

[build-dependencies]
bindgen = "0.49"
cbindgen = "=0.8.4"
