[package]
name = "sha2raw"
version = "2.0.0"
authors = ["RustCrypto Developers", "Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "SHA-2 hash function"
documentation = "https://docs.rs/sha2raw"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
keywords = ["crypto", "sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]
edition = "2018"

[dependencies]
digest = "0.9"
block-buffer = "0.9"
fake-simd = "0.1"
opaque-debug = "0.3"
sha2-asm = { version = "0.5", optional = true }
byteorder = "1.3.4"

[dependencies.lazy_static]
version = "1.4.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpuid-bool = "0.1.0"

[dev-dependencies]
digest = { version = "0.9", features = ["dev", "std"] }
sha2 = "0.9.1"
rand = "0.7.3"
rand_xorshift = "0.2.0"

[features]
default = ["asm"]
asm = ["sha2-asm"]


