[package]
name = "sha2raw"
version = "7.0.0"
authors = [
    "RustCrypto Developers",
    "Friedel Ziegelmayer <me@dignifiedquire.com>",
]
license = "MIT OR Apache-2.0"
description = "SHA-2 hash function"
documentation = "https://docs.rs/sha2raw"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
keywords = ["crypto", "sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]
edition = "2018"

[dependencies]
digest = { workspace = true }
fake-simd = { workspace = true }
opaque-debug = { workspace = true }
sha2-asm = { workspace = true, optional = true }
byteorder = { workspace = true }
lazy_static = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2.2"

[dev-dependencies]
sha2 = { workspace = true }
rand = { workspace = true }
rand_xorshift = { workspace = true }

[features]
default = ["asm"]
asm = ["sha2-asm"]
