[package]
name = "sha2raw"
version = "13.1.0"
authors = ["RustCrypto Developers", "Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "SHA-2 hash function"
documentation = "https://docs.rs/sha2raw"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
keywords = ["crypto", "sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]
edition = "2018"

[dependencies]
# Sorted alphabetically
byteorder.workspace = true
digest = "0.10.3"
fake-simd = "0.1"
lazy_static.workspace = true
opaque-debug = "0.3"
sha2-asm = { version = "0.6", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2.2"

[dev-dependencies]
# Sorted alphabetically
rand.workspace = true
rand_xorshift.workspace = true
sha2.workspace = true

[features]
default = ["asm"]
asm = ["sha2-asm"]


