[package]
name = "storage-proofs-core"
version = "12.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Core parts for proofs of storage"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[lib]
bench = false

[dependencies]
filecoin-hashers = { workspace = true }
rand = { workspace = true }
merkletree = { workspace = true }
byteorder = { workspace = true }
config = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
memmap2 = { workspace = true }
aes = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
blake2b_simd = { workspace = true }
ff = { workspace = true }
bellperson = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
rand_chacha = { workspace = true }
generic-array = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
cpu-time = { workspace = true, optional = true }
gperftools = { workspace = true, optional = true }
num_cpus = { workspace = true }
semver = { workspace = true }
fr32 = { workspace = true }
blstrs = { workspace = true }
cbc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand_xorshift = { workspace = true }
pretty_assertions = { workspace = true }
sha2raw = { workspace = true }
filecoin-hashers = { workspace = true }
tempfile = { workspace = true }
blake2s_simd = { workspace = true }

[features]
default = ["opencl"]
simd = []
asm = ["sha2/sha2-asm"]
big-sector-sizes-bench = []
measurements = ["cpu-time", "gperftools"]
profile = ["measurements"]

cuda = ["bellperson/cuda", "filecoin-hashers/cuda"]
opencl = ["bellperson/opencl", "filecoin-hashers/opencl"]

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "drgraph"
harness = false

[[bench]]
name = "xor"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "misc"
harness = false
