[package]
name = "storage-proofs-core"
version = "15.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Core parts for proofs of storage"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[lib]
bench = false

[dependencies]
filecoin-hashers = { path = "../filecoin-hashers", version = "~10.0.0", default-features = false, features = ["sha256", "poseidon"] }
rand = "0.8"
merkletree = "0.23.0"
byteorder = "1"
config = { version = "0.12.0", default-features = false, features = ["toml"] }
itertools = "0.10.3"
lazy_static = "1.2"
memmap2 = "0.5.6"
aes = "0.8.1"
sha2 = "0.10.2"
fs2 = "0.4"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
blake2b_simd = "1.0.0"
ff = "0.13.0"
bellperson = "0.25.0"
serde_json = "1.0"
log = "0.4.7"
rand_chacha = "0.3"
generic-array = "0.14.4"
anyhow = "1.0.23"
thiserror = "1.0.6"
cpu-time = { version = "1.0", optional = true }
gperftools = { version = "0.2", optional = true }
num_cpus = "1.10.1"
semver = "1.0.6"
fr32 = { path = "../fr32", version = "~8.0.0"}
blstrs = "0.7.0"
cbc = { version = "0.1.2", features = ["std"] }

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"
rand_xorshift = "0.3.0"
pretty_assertions = "1.2.0"
sha2raw = { path = "../sha2raw", version = "~10.0.0"}
filecoin-hashers = { path = "../filecoin-hashers", version = "~10.0.0", default-features = false, features = ["blake2s", "sha256", "poseidon"] }
tempfile = "3"
blake2s_simd = "1.0.0"

[features]
default = ["opencl"]
simd = []
asm = ["sha2/sha2-asm"]
big-sector-sizes-bench = []
measurements = ["cpu-time", "gperftools"]
profile = ["measurements"]

cuda = ["bellperson/cuda", "filecoin-hashers/cuda"]
opencl = ["bellperson/opencl", "filecoin-hashers/opencl"]

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "drgraph"
harness = false

[[bench]]
name = "xor"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "misc"
harness = false
