[package]
name = "storage-proofs-core"
version = "19.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Core parts for proofs of storage"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[lib]
bench = false

[dependencies]
filecoin-hashers = { workspace = true, features = ["sha256", "poseidon"] }
fr32.workspace = true
# Sorted alphabetically
aes = "0.8.1"
anyhow.workspace = true
bellperson.workspace = true
blake2b_simd.workspace = true
blstrs.workspace = true
byteorder.workspace = true
cbc = { version = "0.1.2", features = ["std"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
cpu-time = { workspace = true, optional = true }
ff.workspace = true
fs2 = "0.4"
generic-array.workspace = true
gperftools = { workspace = true, optional = true }
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
memmap2.workspace = true
merkletree.workspace = true
num_cpus.workspace = true
rand.workspace = true
rand_chacha = "0.3"
rayon.workspace = true
semver = "1.0.6"
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
sha2raw.workspace = true
filecoin-hashers = { workspace = true, features = ["blake2s", "sha256", "poseidon"] }
# Sorted alphabetically
blake2s_simd.workspace = true
criterion.workspace = true
pretty_assertions.workspace = true
proptest = "1.0.0"
rand_xorshift.workspace = true
tempfile.workspace = true

[features]
default = ["opencl"]
simd = []
asm = ["sha2/sha2-asm"]
big-sector-sizes-bench = []
measurements = ["cpu-time", "gperftools"]
profile = ["measurements"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = []

cuda = ["bellperson/cuda", "filecoin-hashers/cuda"]
cuda-supraseal = ["bellperson/cuda-supraseal", "filecoin-hashers/cuda"]
opencl = ["bellperson/opencl", "filecoin-hashers/opencl"]

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "drgraph"
harness = false

[[bench]]
name = "xor"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "misc"
harness = false
