[package]
name = "storage-proofs-porep"
version = "14.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Proofs of replication"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
crossbeam = "0.8"
storage-proofs-core = { path = "../storage-proofs-core", version = "~14.0.0", default-features = false}
sha2raw = { path = "../sha2raw", version = "~9.0.0"}
filecoin-hashers = { path = "../filecoin-hashers", version = "~9.0.0", default-features = false, features = ["poseidon", "sha256"]}
merkletree = "0.22.0"
memmap2 = "0.5.6"
num-bigint = "0.4.3"
num-traits = "0.2"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ff = "0.12.0"
bellperson = "0.24.0"
log = "0.4.7"
pretty_assertions = "1.2.0"
generic-array = "0.14.4"
anyhow = "1.0.23"
neptune = { version = "~8.1.0", features = ["bls", "arity2", "arity4", "arity8", "arity11", "arity16", "arity24", "arity36"] }
num_cpus = "1.10.1"
hex = "0.4.2"
bincode = "1.1.2"
byteorder = "1.3.4"
lazy_static = "1.2"
byte-slice-cast = "1.0.0"
hwloc = { version = "0.5.0", optional = true }
libc = "0.2"
fdlimit = "0.2.0"
fr32 = { path = "../fr32", version = "~7.0.0", default-features = false }
yastl = "0.1.2"
blstrs = "0.6.0"
pasta_curves = { version = "0.5.2", optional = true, features = ["repr-c", "serde"], package = "fil_pasta_curves" }
nova-snark = { version = "0.20.3", optional = true }

[build-dependencies]
rustversion = "1.0"

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { version = "0.10.2", features = ["compress", "asm"] }
[target."cfg(not(target_arch = \"aarch64\"))".dependencies]
sha2 = { version = "0.10.2", features = ["compress"] }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
rand_xorshift = "0.3.0"
criterion = "0.3.2"
glob = "0.3.0"
filecoin-hashers = { path = "../filecoin-hashers", version = "~9.0.0", default-features = false, features = ["poseidon", "sha256", "blake2s"]}
fil_logger = "0.1.6"

[features]
default = ["opencl", "multicore-sdr"]
cuda = ["storage-proofs-core/cuda", "filecoin-hashers/cuda", "neptune/cuda", "bellperson/cuda", "nova-snark?/cuda"]
opencl = ["storage-proofs-core/opencl", "filecoin-hashers/opencl", "neptune/opencl", "bellperson/opencl", "nova-snark?/opencl"]
isolated-testing = []
multicore-sdr = ["hwloc"]
nova = ["filecoin-hashers/nova", "storage-proofs-core/nova", "neptune/pasta", "pasta_curves", "nova-snark"]
# Allows testing/benchmarking the SDR-PoRep Nova circuit without first peforming vanilla sealing (i.e. using mock public inputs and witness).
mock-test-circ = ["storage-proofs-core/mock-por-circ"]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parents"
harness = false
