[package]
name = "storage-proofs-porep"
version = "19.0.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Proofs of replication"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
filecoin-hashers = { workspace = true, features = ["poseidon", "sha256"] }
fr32.workspace = true
sha2raw.workspace = true
storage-proofs-core.workspace = true
# Sorted alphabetically
anyhow.workspace = true
bellperson.workspace = true
bincode.workspace = true
blake2b_simd.workspace = true
blstrs.workspace = true
byte-slice-cast.workspace = true
byteorder.workspace = true
chacha20 = "0.9.0"
crossbeam = "0.8"
fdlimit.workspace = true
ff.workspace = true
generic-array.workspace = true
glob = "0.3.0"
hex.workspace = true
hwloc = { version = "2.2.0", optional = true, package = "hwloc2" }
lazy_static.workspace = true
libc = "0.2"
log.workspace = true
memmap2.workspace = true
merkletree.workspace = true
neptune.workspace = true
num-bigint = "0.4.3"
num-traits = "0.2"
num_cpus.workspace = true
pretty_assertions.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
yastl = "0.1.2"

[build-dependencies]
rustversion = "1.0"

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { workspace = true, features = ["compress", "asm"] }
[target."cfg(not(target_arch = \"aarch64\"))".dependencies]
sha2 = { workspace = true, features = ["compress"] }

[dev-dependencies]
filecoin-hashers = { workspace = true, features = [
    "poseidon",
    "sha256",
    "blake2s",
] }
# Sorted alphabetically
criterion.workspace = true
fil_logger.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
tempfile.workspace = true

[features]
default = ["opencl", "multicore-sdr"]
cuda = [
    "storage-proofs-core/cuda",
    "filecoin-hashers/cuda",
    "neptune/cuda",
    "bellperson/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "filecoin-hashers/opencl",
    "neptune/opencl",
    "bellperson/opencl",
]
isolated-testing = []
multicore-sdr = ["hwloc"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = ["storage-proofs-core/fixed-rows-to-discard"]
cpu-profile = []

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parents"
harness = false
