[package]
name = "storage-proofs-post"
version = "15.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "Proofs of Space Time"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../storage-proofs-core", version = "~15.0.0", default-features = false}
filecoin-hashers = { path = "../filecoin-hashers", version = "~10.0.0", default-features = false, features = ["poseidon", "sha256"]}
byteorder = "1"
sha2 = "0.10.2"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
blake2b_simd = "1.0.0"
ff = "0.13.0"
bellperson = "0.25.0"
log = "0.4.7"
hex = "0.4.0"
generic-array = "0.14.4"
anyhow = "1.0.23"
fr32 = { path = "../fr32", version = "~8.0.0", default-features = false }
blstrs = "0.7.0"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.2.0"
filecoin-hashers = { path = "../filecoin-hashers", version = "~10.0.0", default-features = false, features = ["poseidon", "sha256", "blake2s"]}
rand = "0.8"
rand_xorshift = "0.3.0"

[features]
default = ["opencl"]
cuda = ["storage-proofs-core/cuda", "filecoin-hashers/cuda"]
opencl = ["storage-proofs-core/opencl", "filecoin-hashers/opencl"]
