[package]
name = "storage-proofs-post"
version = "16.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "Proofs of Space Time"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../storage-proofs-core", version = "~16.1.0", default-features = false}
filecoin-hashers = { path = "../filecoin-hashers", version = "~11.1.0", default-features = false, features = ["poseidon", "sha256"]}
byteorder = "1"
sha2 = "0.10.2"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
ff = "0.13.0"
bellperson = "0.26.0"
log = "0.4.7"
generic-array = "0.14.4"
anyhow = "1.0.23"
blstrs = "0.7.0"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.2.0"
rand = "0.8"
rand_xorshift = "0.3.0"

[features]
default = ["opencl"]
cuda = ["storage-proofs-core/cuda", "filecoin-hashers/cuda"]
opencl = ["storage-proofs-core/opencl", "filecoin-hashers/opencl"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = ["storage-proofs-core/fixed-rows-to-discard"]
