[package]
name = "storage-proofs-post"
version = "19.0.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "Proofs of Space Time"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core.workspace = true
filecoin-hashers = { workspace = true, features = ["poseidon", "sha256"]}
# Sorted alphabetically
anyhow.workspace = true
bellperson.workspace = true
blstrs.workspace = true
byteorder.workspace = true
ff.workspace = true
generic-array.workspace = true
log.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"]}
sha2.workspace = true

[dev-dependencies]
# Sorted alphabetically
pretty_assertions.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
tempfile.workspace = true

[features]
default = ["opencl"]
cuda = ["storage-proofs-core/cuda", "filecoin-hashers/cuda"]
opencl = ["storage-proofs-core/opencl", "filecoin-hashers/opencl"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = ["storage-proofs-core/fixed-rows-to-discard"]
