[package]
name = "storage-proofs-update"
version = "12.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Proof of SDR-PoRep CC-Sector Update"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../storage-proofs-core", version = "~12.0.0", default-features = false}
storage-proofs-porep = { path = "../storage-proofs-porep", version = "~12.0.0", default-features = false}
filecoin-hashers = { path = "../filecoin-hashers", version = "~7.0.0", default-features = false, features = ["poseidon", "sha256"]}
merkletree = "0.22.0"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
ff = "0.12.0"
bellperson = "0.24.0"
blstrs = "0.6.0"
log = "0.4.7"
generic-array = "0.14.4"
anyhow = "1.0.23"
neptune = { version = "~8.0.0", features = ["bls", "arity2", "arity4", "arity8", "arity11", "arity16", "arity24", "arity36"] }
lazy_static = "1.2"
fr32 = { path = "../fr32", version = "~5.0.0", default-features = false }
memmap2 = "0.5.6"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
rand_xorshift = "0.3.0"

[features]
default = ["opencl", "multicore-sdr"]
isolated-testing = []
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "filecoin-hashers/opencl",
    "neptune/opencl",
    "bellperson/opencl",
]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "filecoin-hashers/cuda",
    "neptune/cuda",
    "bellperson/cuda",
]
sppark = [
    "storage-proofs-core/sppark",
    "storage-proofs-porep/sppark",
    "filecoin-hashers/sppark",
    "neptune/cuda",
    "bellperson/sppark",
]
multicore-sdr = [
    "storage-proofs-porep/multicore-sdr",
]
