[package]
name = "storage-proofs"
description = "Implementations of Proofs of Storage"
version = "5.4.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "laser <l@s3r.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "./core", version = "^5.0.0", default-features = false }
storage-proofs-post = { path = "./post", version = "^5.0.0", default-features = false }
storage-proofs-porep = { path = "./porep", version = "^5.0.0", default-features = false }

[features]
default = ["gpu", "pairing"]
simd = ["storage-proofs-core/simd"]
asm = ["storage-proofs-core/asm"]
gpu = ["storage-proofs-core/gpu", "storage-proofs-porep/gpu", "storage-proofs-post/gpu"]
measurements = ["storage-proofs-core/measurements"]
profile = ["measurements"]
pairing = ["storage-proofs-core/pairing", "storage-proofs-post/pairing", "storage-proofs-porep/pairing"]
blst = ["storage-proofs-core/blst", "storage-proofs-post/blst", "storage-proofs-porep/blst"]
