[package]
name = "storage-proofs-core"
version = "1.0.0-alpha.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[lib]
bench = false

[dependencies]
rand = "0.7"
merkletree = "0.19.0"
byteorder = "1"
config = "0.9.3"
itertools = "0.9"
lazy_static = "1.2"
memmap = "0.7"
aes = "0.3"
block-modes = "0.3"
sha2 = { version = "0.8.3", package = "sha2ni" }
tempfile = "3"
fs2 = "0.4"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
blake2b_simd = "0.5"
blake2s_simd = "0.5"
toml = "0.5"
ff = { version = "0.2.1", package = "fff" }
bellperson = "0.8.0"
paired = { version = "0.19.0", features = ["serde"] }
fil-sapling-crypto = "0.6.0"
serde_json = "1.0"
log = "0.4.7"
rand_chacha = "0.2.1"
hex = "0.4.0"
generic-array = "0.13.2"
anyhow = "1.0.23"
thiserror = "1.0.6"
neptune = { git = "https://github.com/filecoin-project/neptune.git", branch="v1-0-candidate", features=["gpu"] }
cpu-time = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "0.7"
criterion = "0.3"
femme = "1.2.0"
bitvec = "0.17"
rand_xorshift = "0.2.0"
pretty_assertions = "0.6.1"
storage-proofs-porep = { path = "../porep", version = "1.0.0-alpha.0" }
sha2raw = { path = "../../sha2raw" }

[features]
default = ["gpu"]
simd = []
asm = ["sha2/sha2-asm"]
big-sector-sizes-bench = []
gpu = ["bellperson/gpu", "fil-sapling-crypto/gpu"]
measurements = ["cpu-time"]
profile = ["measurements"]

[[bench]]
name = "pedersen"
harness = false

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "drgraph"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parents"
harness = false

[[bench]]
name = "xor"
harness = false

[[bench]]
name = "fr"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "misc"
harness = false
