[package]
name = "storage-proofs-core"
version = "5.4.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Core parts for proofs of storage"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[lib]
bench = false

[dependencies]
rand = "0.7"
merkletree = "0.21.0"
byteorder = "1"
config = { version = "0.10.1", default-features = false, features = ["toml"] }
itertools = "0.9"
lazy_static = "1.2"
memmap = "0.7"
aes = "0.6"
block-modes = "0.7"
sha2 = "0.9.1"
tempfile = "3"
fs2 = "0.4"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
blake2b_simd = "0.5"
blake2s_simd = "0.5"
toml = "0.5"
ff = { version = "0.2.3", package = "fff" }
bellperson = { version = "0.12", default-features = false }
serde_json = "1.0"
log = "0.4.7"
rand_chacha = "0.2.1"
hex = "0.4.0"
generic-array = "0.14.4"
anyhow = "1.0.23"
thiserror = "1.0.6"
neptune = { version = "2.2.0", default-features = false, features = ["gpu"] }
cpu-time = { version = "1.0", optional = true }
gperftools = { version = "0.2", optional = true }
num_cpus = "1.10.1"

[dev-dependencies]
proptest = "0.10"
criterion = "0.3"
bitvec = "0.17"
rand_xorshift = "0.2.0"
pretty_assertions = "0.6.1"
sha2raw = { path = "../../sha2raw", version = "^2.0.0"}

[features]
default = ["gpu", "pairing"]
simd = []
asm = ["sha2/sha2-asm"]
big-sector-sizes-bench = []
gpu = ["bellperson/gpu"]
measurements = ["cpu-time", "gperftools"]
profile = ["measurements"]
pairing = ["bellperson/pairing", "neptune/pairing", "bellperson/pairing-serde"]
blst = ["bellperson/blst", "neptune/blst", "bellperson/blst-serde"]

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "drgraph"
harness = false

[[bench]]
name = "xor"
harness = false

[[bench]]
name = "fr"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "misc"
harness = false
