[package]
name = "storage-proofs-porep"
version = "5.2.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Proofs of replication"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
crossbeam = "0.7.3"
digest = "0.9"
storage-proofs-core = { path = "../core", version = "^5.0.0"}
sha2raw = { path = "../../sha2raw", version = "^2.0.0"}
rand = "0.7"
merkletree = "0.21.0"
mapr = "0.8.0"
num-bigint = "0.2"
num-traits = "0.2"
sha2 = { version = "0.9.1", features = ["compress"] }
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ff = { version = "0.2.3", package = "fff" }
bellperson = "0.9.1"
paired = { version = "0.20.0", features = ["serde"] }
fil-sapling-crypto = "0.6.3"
log = "0.4.7"
pretty_assertions = "0.6.1"
generic-array = "0.13.2"
anyhow = "1.0.23"
neptune = { version = "=1.2.0", features = ["gpu"] }
num_cpus = "1.10.1"
hex = "0.4.2"
bincode = "1.1.2"
byteorder = "1.3.4"
lazy_static = "1.2"
byte-slice-cast = "0.3.5"
hwloc = "0.3.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
rand_xorshift = "0.2.0"
criterion = "0.3.2"
glob = "0.3.0"
pretty_env_logger = "0.4.0"

[features]
default = []

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parents"
harness = false
