[package]
name = "storage-proofs-post"
version = "5.4.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "Proofs of Space Time"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../core", version = "^5.0.0", default-features = false}
rand = "0.7"
merkletree = "0.21.0"
byteorder = "1"
crossbeam = "0.8"
sha2 = "0.9.1"
rayon = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
blake2b_simd = "0.5"
blake2s_simd = "0.5"
ff = { version = "0.2.3", package = "fff" }
bellperson = { version = "0.12", default-features = false }
log = "0.4.7"
hex = "0.4.0"
generic-array = "0.14.4"
anyhow = "1.0.23"
neptune = { version = "2.2.0", default-features = false, features = ["gpu"] }
num_cpus = "1.10.1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "0.6.1"
rand_xorshift = "0.2.0"

[features]
default = ["pairing", "gpu"]
gpu = ["storage-proofs-core/gpu"]
pairing = ["storage-proofs-core/pairing", "bellperson/pairing", "neptune/pairing"]
blst = ["storage-proofs-core/blst", "bellperson/blst", "neptune/blst"]
